--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     changelog
     -->
 
-    <string name="app_name">Pixelify GPhotos</string>
+    <string name="app_name">Google CtS Enabler</string>
 
     <!--activity_main.xml-->
     <string name="reset">Reset</string>
@@ -74,10 +74,11 @@
         To share logs, open LSPosed / EdXposed -> Logs -> top Save icon. Then share the created file.
     </string>
     <string name="spoof_android_version">Spoof android version.</string>
-    <string name="spoof_android_version_desc">Do not set an Android version greater than your current version.\n
+    <string name="spoof_android_version_desc">Change this if you know what you are doing!\n
+        Do not set an Android version greater than your current version.\n
         Example, if your Android version is <b>Pie</b>, you can set <b>Nougat / Oreo / Pie</b>, but not Q / R / S.
     </string>
-    <string name="this_might_cause_crash">This might cause Google Photos to immediately crash!</string>
+    <string name="this_might_cause_crash">This might break the Google App completely!</string>
     <string name="dont_spoof_android_version">Don\'t spoof Android version <b>(Recommended)</b></string>
     <string name="follow_spoof_device_version">Follow spoof device Android version.</string>
     <string name="manually_set_android_version">Manually set Android version.</string>
@@ -86,4 +87,5 @@
     <string name="killing_please_wait">Killing… please wait.</string>
     <string name="failed_to_stop_package">Failed to stop package. Please stop manually.</string>
     <string name="failed_to_launch_package">Failed to launch. Please start manually.</string>
+    <string name="force_stop_google">Force Stop Google</string>
 </resources>
